--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="CSS.css">
+  <link rel="stylesheet" href="assets/css/CSS.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -78,7 +78,7 @@
 
                   <figure>
                     <a href="#BookPage" style="display: block" data-trackcontent>
-                      <img class="ourFavoritesImage" src="fotoHP.jpg" alt="Favorite 1">
+                      <img class="ourFavoritesImage" src="assets/img/fotoHP.jpg" alt="Favorite 1">
                     </a>
                   </figure>
                 </div>
@@ -109,7 +109,7 @@
 
                 <figure>
                   <a href="#BookPage" style="display: block" data-trackcontent>
-                    <img class="ourFavoritesImage" src="fotoHP.jpg" alt="Favorite 1">
+                    <img class="ourFavoritesImage" src="assets/img/fotoHP.jpg" alt="Favorite 1">
                   </a>
                 </figure>
               </div>
@@ -143,7 +143,7 @@
 
               <figure>
                 <a href="#BookPage" style="display: block" data-trackcontent>
-                  <img class="ourFavoritesImage" src="fotoHP.jpg" alt="Favorite 1">
+                  <img class="ourFavoritesImage" src="assets/img/fotoHP.jpg" alt="Favorite 1">
                 </a>
               </figure>
             </div>
@@ -173,7 +173,7 @@
 
             <figure>
               <a href="#BookPage" style="display: block" data-trackcontent>
-                <img class="ourFavoritesImage" src="fotoHP.jpg" alt="Favorite 1">
+                <img class="ourFavoritesImage" src="assets/img/fotoHP.jpg" alt="Favorite 1">
               </a>
             </figure>
           </div>
@@ -215,7 +215,7 @@
 
           <figure>
             <a href="#BookPage" style="display: block" data-trackcontent>
-              <img class="bestSellerImage" src="fotoHP.jpg" alt="Favorite 1">
+              <img class="bestSellerImage" src="assets/img/fotoHP.jpg" alt="Favorite 1">
             </a>
           </figure>
         </div>
@@ -246,7 +246,7 @@
 
         <figure>
           <a href="#BookPage" style="display: block" data-trackcontent>
-            <img class="ourFavoritesImage" src="fotoHP.jpg" alt="Favorite 1">
+            <img class="ourFavoritesImage" src="assets/img/fotoHP.jpg" alt="Favorite 1">
           </a>
         </figure>
       </div>
@@ -280,7 +280,7 @@
 
       <figure>
         <a href="#BookPage" style="display: block" data-trackcontent>
-          <img class="bestSellerImage" src="fotoHP.jpg" alt="Favorite 1">
+          <img class="bestSellerImage" src="assets/img/fotoHP.jpg" alt="Favorite 1">
         </a>
       </figure>
     </div>
@@ -310,7 +310,7 @@
 
     <figure>
       <a href="#BookPage" style="display: block" data-trackcontent>
-        <img class="ourFavoritesImage" src="fotoHP.jpg" alt="Favorite 1">
+        <img class="ourFavoritesImage" src="assets/img/fotoHP.jpg" alt="Favorite 1">
       </a>
     </figure>
   </div>
@@ -354,19 +354,19 @@
       <!-- The slideshow -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="fotoHP.jpg" alt="Los Angeles">
+          <img src="assets/img/fotoHP.jpg" alt="Los Angeles">
           <div class="carousel-caption">
             <h3>Nome Libro</h3><br>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="fotoHP.jpg" alt="Chicago">
+          <img src="assets/img/fotoHP.jpg" alt="Chicago">
           <div class="carousel-caption">
             <h3>Nome Libro</h3><br>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="fotoHP.jpg" alt="New York">
+          <img src="assets/img/fotoHP.jpg" alt="New York">
           <div class="carousel-caption">
             <h3>Nome Libro</h3><br>
           </div>
