--- a/FrontEnd/pages/Book.html
+++ b/FrontEnd/pages/Book.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="CSS.css">
+  <link rel="stylesheet" href="../assets/css/CSS.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 </head>
@@ -58,7 +58,7 @@
 
   <div id="bookContainer" class="row">
     <div class="col-4">
-      <img id="bookImage" src="fotoHP.jpg" alt="">
+      <img id="bookImage" src="../assets/img/fotoHP.jpg" alt="">
     </div>
     <div id="bookData" class="col-4">
       <h4>Titolo: <a href="#titoloLibro" >Titolo libro</a></h4><br>
