--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -83,10 +83,10 @@
                             <a href="#"><i class="fas fa-cart-plus"></i></a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle nav_text_color" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Books</a>
+                            <a class="nav-link dropdown-toggle nav_text_color" href="pages/allBooks.html" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Books</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown03">
                                 <a class="dropdown-item" href="#">Themes</a>
-                                <a class="dropdown-item" href="#">Genres</a>
+                                <a class="dropdown-item" href="pages/allGenre.html">Genres</a>
                             </div>
                         </li>
                         <li class="nav-item">
