--- a/FrontEnd/pages/Author.html
+++ b/FrontEnd/pages/Author.html
@@ -19,6 +19,9 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        
+         <script src="../assets/js/main.js"></script>
+         
     </head>
 
     <body>
@@ -119,8 +122,8 @@
 
             <div class="row ">
                 <div class="col-4">
-                    <img id="authorPic" src="../assets/img/authors/rowing.jpg" alt="">
-                    <h4 id="name">Nome autore</h4>
+                    <img id="authorPic" src="" alt="">
+                    <h4 id="autName">Nome autore</h4>
                 </div>
                 <div class="col-8">
 
