--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -65,11 +65,11 @@
 
 
 <!--lower navbar-->
-<nav id="navbar" class=" lower-nav navbar navbar-expand-sm dark_color sticky-top">
+<!--nav id="navbar" class=" lower-nav navbar navbar-expand-sm dark_color sticky-top">
 
   <!--div class="container"-->
 
-  <button id="navbarButton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsCollapse" aria-controls="navbarsCollapse" aria-expanded="false" aria-label="Toggle navigation">
+  <!--button id="navbarButton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsCollapse" aria-controls="navbarsCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarsCollapse">
@@ -100,8 +100,8 @@
     </ul>
 
   </div>
-  <!--/div-->
-</nav>
+  
+</nav-->
 </div>
 <br>
 
