Add footer to index.html

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -100,7 +100,7 @@
     </ul>
 
   </div>
-  
+
 </nav-->
 </div>
 <br>
@@ -263,7 +263,15 @@
   </div>
 </div>
 <!--___________END BestSeller, OurFavorite_____________-->
+<!--Footer-->
 
+<footer>
+  <a href="">Contact Us</a>
+  <a href="">Shipping Info</a>
+  <a href="">Cookies</a>
+  <a href="">Privacy</a>
+</footer>
+<!--___________END Footer_____________-->
 
 </body>
 </html>
