Add AJAX for index.html

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,6 +15,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="assets/js/main.js"></script>
 </head>
 
 <body>
@@ -144,130 +145,40 @@
 </div>
 <!--___________END Book, Author, Event_____________-->
 
-<!--BestSeller, OurFavorite-->
+<!--BestSeller, ourFavourite-->
 
 <div class="container">
   <div class="row">
     <div class="col-4">
-      <div class="bestSellerContainer">
+      <div id="bestSellerContainer">
         <p id="bestSellerContainerTitle">Best Seller</p>
-        <div id="firstBestSeller" class="bestSeller">
-          <p id="firstBestSellerNumber">#1</p>
-          <img src="assets/img/fotoHP.jpg" alt="">
-          <span>
-            <p>Titolo</p>
-            <p>Autore</p>
-            <p>Descrizione</p>
-          </span>
-        </div>
-        <div class="bestSeller">
-          <p class="bestSellerNumber">#2</p>
-          <span>
-            <p>Titolo</p>
-            <p>Autore</p>
-            <p>Descrizione</p>
-          </span>
 
-        </div>
-        <div class="bestSeller">
-          <p class="bestSellerNumber">#2</p>
-          <span>
-            <p>Titolo</p>
-            <p>Autore</p>
-            <p>Descrizione</p>
-          </span>
-
-        </div>
-        <div class="bestSeller">
-          <p class="bestSellerNumber">#2</p>
-          <span>
-            <p>Titolo</p>
-            <p>Autore</p>
-            <p>Descrizione</p>
-          </span>
-
-        </div>
-        <div class="bestSeller">
-          <p class="bestSellerNumber">#2</p>
-          <span>
-            <p>Titolo</p>
-            <p>Autore</p>
-            <p>Descrizione</p>
-          </span>
-
-        </div>
       </div>
     </div>
 
     <div class="col-8">
-      <div class="ourFavoriteContainer">
-        <p id="ourFavoriteTitle">Our Favorite</p>
+      <div id="ourFavouriteContainer">
+        <p id="ourFavouriteTitle">Our Favourite</p>
         <div class="row">
-          <div class="col">
-            <div class="ourFavorite">
-              <img src="assets/img/fotoHP.jpg" alt="">
-              <span>
-                <p>Titolo</p>
-                <p>Autore</p>
-                <p>Descrizione</p>
-              </span>
-            </div>
-            <div class="ourFavorite">
-              <img src="assets/img/fotoHP.jpg" alt="">
-              <span>
-                <p>Titolo</p>
-                <p>Autore</p>
-                <p>Descrizione</p>
-              </span>
-            </div>
-            <div class="ourFavorite">
-              <img src="assets/img/fotoHP.jpg" alt="">
-              <span>
-                <p>Titolo</p>
-                <p>Autore</p>
-                <p>Descrizione</p>
-              </span>
-            </div>
+          <div id="leftOurFavourite" class="col">
+
           </div>
 
 
-          <div class="col">
-            <div class="ourFavorite">
-              <img src="assets/img/fotoHP.jpg" alt="">
-              <span>
-                <p>Titolo</p>
-                <p>Autore</p>
-                <p>Descrizione</p>
-              </span>
-            </div>
-            <div class="ourFavorite">
-              <img src="assets/img/fotoHP.jpg" alt="">
-              <span>
-                <p>Titolo</p>
-                <p>Autore</p>
-                <p>Descrizione</p>
-              </span>
-            </div>
-            <div class="ourFavorite">
-              <img src="assets/img/fotoHP.jpg" alt="">
-              <span>
-                <p>Titolo</p>
-                <p>Autore</p>
-                <p>Descrizione</p>
-              </span>
-            </div>
+          <div id="rightOurFavourite" class="col">
+
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<!--___________END BestSeller, OurFavorite_____________-->
+<!--___________END BestSeller, ourFavourite_____________-->
 <!--Footer-->
 
 <footer>
-  <a href="">Contact Us</a>
-  <a href="">Shipping Info</a>
+  <a href="pages/ContactUs.html">Contact Us</a>
+  <a href="pages/ContactUs.html">Shipping Info</a>
   <a href="">Cookies</a>
   <a href="">Privacy</a>
 </footer>
