Single event page

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -114,10 +114,10 @@
 
     <div id="bookLink" class="col">
       <div class="Link">
-        <a href="pages/allBooks.html">Book</a>
+        <a href="pages/BooksList.html">Book</a>
       </div>
       <div class="Link">
-        <a href="pages/allGenre.html">Genres</a>
+        <a href="pages/GenresList.html">Genres</a>
       </div>
       <div class="Link">
         <a href="pages/allThemes.html">Themes</a>
@@ -136,7 +136,7 @@
     <div id="eventLink" class="col">
       <div class="Link"></div>
       <div class="Link">
-        <a href="#">Events</a>
+        <a href="pages/EventsList.html">Events</a>
       </div>
       <div class="Link"></div>
     </div>
