Add Cart.html and Sign_Up.html and create JS function for LogIn, SignUp, and Cart

--- a/FrontEnd/pages/Sign_Up.html
+++ b/FrontEnd/pages/Sign_Up.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Log in</title>
+  <title>Sign Up</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -18,26 +18,28 @@
         <br><br><br><br><br>
         <div class="card card-signin my-5">
           <div class="card-body">
-            <h5 class="card-title text-center">Log in</h5>
+            <h5 class="card-title text-center">Sign Up</h5>
             <form class="form-signin">
+
               <div class="form-label-group">
-                <input type="text" id="logInUsername" class="form-control" placeholder="Username" required autofocus>
+                <input type="email" id="signUpEmail" class="form-control" placeholder="Email" required autofocus>
               </div>
 
               <div class="form-label-group">
-                <input type="password" id="logInPassword" class="form-control" placeholder="Password" required>
+                <input type="text" id="signUpUsername" class="form-control" placeholder="Username" required>
+              </div>
+
+              <div class="form-label-group">
+                <input type="password" id="signUpPassword" class="form-control" placeholder="Password" required>
               </div>
 
               <div class="custom-control custom-checkbox mb-3">
                 <input type="checkbox" class="custom-control-input" id="customCheck1">
                 <label class="custom-control-label" for="customCheck1">Remember password</label>
               </div>
-              <button id="logInButton" class="btn btn-lg btn-primary btn-block text-uppercase funny_color" type="submit">Log In</button>
+              <button id="signUpButton" class="btn btn-lg btn-primary btn-block text-uppercase funny_color" type="submit">Sign Up</button>
             </form>
             <hr>
-          </div>
-          <p class="signup-text text-center">Press <a href="Sign_Up.html">Here</a> to Sign Up</p>
-        </div>
       </div>
     </div>
   </div>
