Ajax logIn logOut SignUp

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -128,7 +128,7 @@
     <div id="writerLink" class="col">
       <div class="Link"></div>
       <div class="Link">
-        <a href="">Authors</a>
+        <a id="logOutButton" href="">Authors</a>
       </div>
       <div class="Link"></div>
     </div>
