--- a/FrontEnd/pages/Sign_Up.html
+++ b/FrontEnd/pages/Sign_Up.html
@@ -22,7 +22,7 @@
             <form class="form-signin">
 
               <div class="form-label-group">
-                <input type="email" id="signUpEmail" class="form-control" placeholder="Email" required autofocus>
+                <input type="text" id="signUpEmail" class="form-control" placeholder="Email" required autofocus>
               </div>
 
               <div class="form-label-group">
@@ -33,10 +33,6 @@
                 <input type="password" id="signUpPassword" class="form-control" placeholder="Password" required>
               </div>
 
-              <div class="custom-control custom-checkbox mb-3">
-                <input type="checkbox" class="custom-control-input" id="customCheck1">
-                <label class="custom-control-label" for="customCheck1">Remember password</label>
-              </div>
               <button id="signUpButton" class="btn btn-lg btn-primary btn-block text-uppercase funny_color" type="submit">Sign Up</button>
             </form>
             <hr>
